fix(textarea): native textarea should have a scrollbar by default

--- a/packages/nouvelle/scss/input/_layout.scss
+++ b/packages/nouvelle/scss/input/_layout.scss
@@ -53,7 +53,9 @@
     textarea.k-textarea {
         padding-inline: var( --kendo-input-padding-x, 0 );
         padding-block: var( --kendo-input-padding-y, 0 );
-        -webkit-appearance: none;
+    }
+    textarea.k-textarea {
+        overflow: auto;
     }
 
 
